# Magabot

./: .gitignore  Dependencys.txt
src/imu_mpu6050/: CMakeLists.txt  package.xml
src/imu_mpu6050/msg/: Inertial.msg  imu_raw.msg
src/imu_mpu6050/src/: ConvertIMU.cpp  IMU.cpp
src/launch/: core.launch  filter.launch
src/mag_desc/: CMakeLists.txt  package.xml
src/mag_description/: CMakeLists.txt  model.config  package.xml
src/mag_description/launch/: magabotURDF.launch  rviz_urdf.launch
src/mag_description/urdf/: magabot.gazebo  magabot.xacro
src/mag_description/urdf/parts/: wheel.xacro
src/mag_description/urdf/sensors/: hokuyo_laser.gazebo.xacro  hokuyo_laser.xacro  imu.gazebo.xacro  imu.xacro  xtion.gazebo.xacro  xtion.xacro
src/mag_joy/: CMakeLists.txt  manifest.xml  package.xml
src/mag_joy/launch/: mag_joy.launch
src/mag_joy/src/: virtual_joystick.py
src/mag_navigation/: CMakeLists.txt  package.xml
src/mag_navigation/common/: base_local_planner_params.yaml  costmap_common_params.yaml  local_costmap_params.yaml  move_base_params.yaml
src/mag_navigation/launch/: slam.launch  static.launch
src/mag_navigation/mag_slam/: CMakeLists.txt  package.xml
src/mag_navigation/mag_slam/launch/: slam.launch
src/mag_navigation/mag_slam/src/: base_local_planner_params.yaml  costmap_common_params.yaml  local_costmap_params.yaml
src/mag_navigation/mag_static/: CMakeLists.txt  package.xml
src/mag_navigation/mag_static/launch/: static.launch
src/mag_navigation/mag_window/: CMakeLists.txt  package.xml
src/mag_navigation/mag_window/launch/: window.launch
src/mag_navigation/mag_window/src/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  rollout.yaml
src/mag_navigation/slam/: gmapping_params.yaml
src/mag_navigation/static/: global_costmap_params.yaml
src/mag_navigation/window/: global_costmap_params.yaml
src/mag_simulation/: CMakeLists.txt  package.xml
src/mag_simulation/config/: slam.rviz
src/mag_simulation/launch/: magabotControl.launch  magabotSim.launch  mapBuilder.launch  room.launch
src/mag_simulation/mag_control/: CMakeLists.txt  package.xml
src/mag_simulation/mag_control/config/: mag_control.yaml
src/mag_simulation/mag_control/launch/: mag_control.launch
src/mag_simulation/mag_description/: CMakeLists.txt  package.xml
src/mag_simulation/mag_description/launch/: rviz.launch  rvizConfig.rviz
src/mag_simulation/mag_description/meshes/: xtion.dae
src/mag_simulation/mag_description/src/: Footprint.cpp
src/mag_simulation/mag_description/urdf/: magabot.gazebo  magabot.xacro
src/mag_simulation/mag_description/urdf/parts/: caster.xacro  chassis.xacro  wheel.xacro
src/mag_simulation/mag_description/urdf/sensors/: hokuyo_laser.gazebo.xacro  hokuyo_laser.xacro  microstrain.gazebo.xacro  microstrain.xacro  xtion.gazebo.xacro  xtion.xacro
src/mag_simulation/mag_gazebo/: CMakeLists.txt  package.xml
src/mag_simulation/mag_gazebo/launch/: mag_world.launch  rvizConfig.rviz
src/mag_simulation/mag_gazebo/worlds/: magabot.world
src/mag_simulation/models/rect_room/: model.config  rect_room.xacro
src/mag_simulation/worlds/: gas_station.world  magabot.world
src/magabot/: CMakeLists.txt  joy_control.launch  package.xml  solo_control.launch
src/magabot/launch/: core.launch  core2.launch  duocore.launch  filter.launch  magabot.launch
src/magabot/msg/: IRsensor.msg  batteryState.msg  magabotState.msg  msgSensor.msg  status.msg
src/magabot/src/: Control.cpp  Controller.cpp  IRSensor.cpp  MotorControl.cpp  Odometry.cpp  SonarSensor.cpp  converterIR.cpp  converterUS.cpp
src/xboxjoy/: CMakeLists.txt
src/xboxjoy/launch/: xboxjoy.launch
src/xboxjoy/src/: xboxjoy_node.cpp
