<?xml version="1.0"?>
<package>
  <name>mag_navigation</name>
  <version>0.0.0</version>
  <description>The navigation package for magabot</description>

  <maintainer email="carlos@todo.todo">carlos</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

  <build_depend>move_base</build_depend>
  <run_depend>move_base</run_depend>

  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>

  <export></export>
</package>
