<?xml version="1.0"?>
<package>
  <name>mag_simulation</name>
  <version>0.0.0</version>
  <description>Magabot URDF simulation</description>
  
  <maintainer email="posse@todo.todo">posse</maintainer>
  
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

  <export></export>
</package>
