<?xml version="1.0"?>
<package>
  <name>mag_slam</name>
  <version>0.0.0</version>
  <description>The magabot_nav package</description>

  <maintainer email="carlos@todo.todo">carlos</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>
  
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
  
  <build_depend>rosserial_arduino</build_depend>
  <run_depend>rosserial_arduino</run_depend>
  
  <build_depend>magabot</build_depend>
  <run_depend>magabot</run_depend>

  <build_depend>move_base</build_depend>
  <run_depend>move_base</run_depend>
  
  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>

  <build_depend>tf</build_depend>
  <run_depend>tf</run_depend>

  <export></export>
</package>
