<?xml version="1.0"?>
<package>
  <name>mag_control</name>
  <version>0.0.0</version>
  <description>ROS control for magabot</description>
  
  <maintainer email="posse@todo.todo">posse</maintainer>
  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>controller_manager</run_depend>

  <export></export>
</package>
