<?xml version="1.0"?>
<package>
  <name>mag_description</name>
  <version>0.0.0</version>
  <description>Magabot URDF description</description>
  
  <maintainer email="posse@todo.todo">posse</maintainer>
  
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>

  <export></export>
</package>
